--- a/Problem 4.tex
+++ b/Problem 4.tex
@@ -311,7 +311,7 @@ Lemma~\ref{lem:score-id}\ref{it:score-centered}:
 %\begin{theorem}\label{thm:critval}
 %Let $p \in \PnR$ have distinct roots, and let
 %$\zeta_1,\ldots,\zeta_{n-1}$ be the (simple) zeros of $p'$. Then
-%\begin{equation}\label{eq:critval}
+%\begin{equation}\label{eq:critval-commented}
 %  \Phi_n(p)
 %  = -\frac{1}{4}\sum_{j=1}^{n-1}\frac{p''(\zeta_j)}{p(\zeta_j)}.
 %\end{equation}
