--- a/Undergrad/Análisis Numérico/Particle Swarm Optimization/PSO.tex
+++ b/Undergrad/Análisis Numérico/Particle Swarm Optimization/PSO.tex
@@ -571,7 +571,7 @@ Los encargados de la eficiencia de tal proceso desean utilizar el algoritmo ``PS
 \begin{minipage}{\linewidth}
 \centering
 \bigskip
-\captionof{table}{} \label{tab:title} 
+\captionof{table}{} \label{tab:title-1} 
 $$\begin{tabular}{|c|c|c|c|}
 \hline
     $i$ & $m_i$ & $p_i$ & $d_i$ \\
@@ -719,7 +719,7 @@ Ejecutando la función ``SwarmOpti'' obtenemos los pesos de cada cliente en un v
 \begin{minipage}{\linewidth}
 \centering
 \bigskip
-\captionof{table}{} \label{tab:title} 
+\captionof{table}{} \label{tab:title-2} 
 $$\begin{tabular}{c|c}
     $i$ & $f(x_i)$ \\
     \hline
@@ -747,7 +747,7 @@ Ejecutando el código, obtenemos una matriz de $10000\times 5$ pesos y sacando l
 \begin{minipage}{\linewidth}
 \centering
 \bigskip
-\captionof{table}{} \label{tab:title} 
+\captionof{table}{} \label{tab:title-3} 
 $$\begin{tabular}{c|c}
     $i$ & $f(x_i)$ Promedio\\
     \hline
